# cpp_weather_app_usa

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main  main.cpp  openapi.yaml  weather_api_client.cpp  weather_api_client.h  weather_database.cpp  weather_database.h  weather_helpers.cpp
backend/: CMakeLists.txt  Dockerfile
backend/include/: db_config.h  utils.h  weather_database.h  weather_helpers.h  weather_rest_api.h
backend/src/: db_config.cpp  main.cpp  utils.cpp  weather_database.cpp  weather_rest_api.cpp
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  Login.js  MapWithStations.js  Navbar.js  Signup.js  StationSelector.js  VariableSelector.js  WeatherChart.js
nginx/: nginx.conf
